almost done page

--- a/cv-sida-react/src/styles/navbar.css
+++ b/cv-sida-react/src/styles/navbar.css
@@ -4,22 +4,21 @@
   margin: 0px;
 }
 
-.nav li {
+.nav ul li {
   list-style: none;
   display: inline;
 }
 .nav {
   background-color: rgb(7, 9, 7);
   overflow: hidden;
-  text-decoration: none;
   display: flex;
   justify-content: space-between;
   font-family: "Roboto Mono", sans-serif;
 }
 
-/* .nav a {
+.nav a {
   text-decoration: none;
-} */
+}
 
 .nav .active {
   line-height: 1.5;
@@ -66,4 +65,26 @@
 .topnav a:hover {
   background-color: #ddd;
   color: black;
+}
+
+@media (max-width: 1000px) {
+  .topnav {
+    display: block;
+  }
+  .nav {
+    display: none;
+  }
+
+  .cv-section {
+    width: 80vw;
+    margin-left: 1rem;
+  }
+}
+
+@media (max-width: 622px) {
+  .cv-section {
+    width: 100%;
+    margin-left: 0;
+    min-width: 0;
+  }
 }
